small fix on text align

--- a/website/style.css
+++ b/website/style.css
@@ -2,7 +2,6 @@ body {
   background: #1E1E23;
   margin: 0;
   font-family: 'Franklin Gothic Medium', sans-serif;
-  text-align: center; /* Center align the content within the body */
 }
 
 .navigation {
